samples/_failures_safe/1761660753_3900f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_adf924cf.c: In function ‘main’:
./samples/SAFE/__tmp_adf924cf.c:145:5: error: expected identifier or ‘(’ at end of input
  145 |     uint8_t *
      |     ^~~~~~~
./samples/SAFE/__tmp_adf924cf.c:145:5: error: expected declaration or statement at end of input
